Correct delete, improve readability

--- a/PescaFalciano/wwwroot/css/Index.css
+++ b/PescaFalciano/wwwroot/css/Index.css
@@ -4,11 +4,11 @@
 
 input, h1, h2 {
     margin-left: 30%;
-    margin-right: 30%;
+    /*margin-right: 30%;*/
     text-align: center;
     width: 40%;
     font-family: Calibri;
-    font-weight: bold;
+    font-weight: 800;
     font-size: xx-large;
 }
 
@@ -16,8 +16,18 @@ h1 {
     margin-top: 25%;
 }
 
-input[type=number] {
-    padding: 1.5%;
+input[type=number], input[type=button] {
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
     border-radius: 40px;
+    width: 40vw;
+    margin-left: 30%;
     border-style: none;
 }
+/*
+input[type=button] {
+    padding: 1.5%;
+    border-radius: 40px;
+    width: 40%;
+    border-style: none;
+}*/
